--- a/GoodPT/accounts/templates/login.html
+++ b/GoodPT/accounts/templates/login.html
@@ -8,7 +8,6 @@
     <script defer src="{% static 'js/login.js' %}?after"></script>
     <script defer src="{% static 'js/modal.js' %}?after"></script>
   
-    
  
 
     <div class="wrapper" >
@@ -90,8 +89,8 @@
             <div class="content-wrapper">
                 <div class="content">
                  
-                       
-                        <ol id="contentPlaceholder">전달될부분</ol>
+                    
+                    <p id="contentPlaceholder" style="list-style: none;">    </p>
                                 
                             </div>
                         </div>
