--- a/GoodPT/board/templates/board/question_list.html
+++ b/GoodPT/board/templates/board/question_list.html
@@ -17,7 +17,7 @@
 <div class="container my-3" id="question_list">
     <div class="row justify-content-between my-3"  >
         <div class="col-2"style="margin-top: 30px">
-            <select class="form-control so">
+            <select class="form-control so" style="text-align:center;">
                 <option value="recent" {% if so == 'recent' %}selected{% endif %}>최신순</option>
                 <option value="recommend" {% if so == 'recommend' %}selected{% endif %}>추천순</option>
                 <option value="popular" {% if so == 'popular' %}selected{% endif %}>답변순</option>
