edit report page

--- a/GoodPT/report/templates/report.html
+++ b/GoodPT/report/templates/report.html
@@ -23,37 +23,80 @@
                 <div class="large-12 columns">
                     <div class="report-row hero" data-equalizer>
                         <div class="large-6 columns panel" data-equalizer-watch>
-                            <h1>Search results</h1>
-                            <p>Report for search results in website.com</p>
+                            <h1>발표 분석 결과</h1>
+                            <p>{{ user.username }}님의 <몇>번째 발표 분석 결과입니다.</p>
+                            <p>날짜 ex) 2023.11.03</p>
                         </div>
                         <div class="large-6 columns panel bg" data-equalizer-watch>&nbsp;</div>
                     </div>
                 </div>
                 <div class="report-row">
-                    <div class="large-12 columns title text-center wow fadeInUp">
-                        <h1>Graphs</h1>
+                    <div class="large-12 columns title text-center">
+                        <h1>태도 분석</h1>
                         <p>Check out our amazing graphs made by chartist.js based on our search results in our search engine</p>
+                        <table align="center">
+                            <tr align="center">
+                                <td width=300>
+                                    <h6>
+                                        &quot;I ve been using Servion for hosting many of my wordpress websites and I truly appreciate how affordable it is
+                                        I ve been using Servion for hosting many of my wordpress websites and I truly appreciate how affordable it is
+                                        I ve been using Servion for hosting many of my wordpress websites and I truly appreciate how affordable it is
+                                        I ve been using Servion for hosting many of my wordpress websites and I truly appreciate how affordable it is&quot;
+                                    </h6>
+                                    
+                                </td>
+                                <td width=300>
+                                    <h6>제스쳐 비율</h6>
+                                    <img src="' %}" width=150 height=150/>
+                                    <h6>정면 응시 비율</h6>
+                                    <img src="' %}" width=150 height=150/>
+                                </td>
+                            </tr>
+                        </table>
                     </div>
-                    <div class="large-6 columns m-chart wow fadeInUp" data-wow-delay="0.5s">
-                        <h1 class="text-center">Search by day</h1>
-                        <p class="text-center">Search results this week</p>
+                    <hr>
+                    <div class="large-12 columns title text-center">
+                        <h1>음성 분석</h1>
+                        <p>Check out our amazing graphs made by chartist.js based on our search results in our search engine</p>
+                        <table align="center">
+                            <tr align="center">
+                                <td width=300>
+                                    <h6>
+                                        &quot;I ve been using Servion for hosting many of my wordpress websites and I truly appreciate how affordable it is
+                                        I ve been using Servion for hosting many of my wordpress websites and I truly appreciate how affordable it is
+                                        I ve been using Servion for hosting many of my wordpress websites and I truly appreciate how affordable it is
+                                        I ve been using Servion for hosting many of my wordpress websites and I truly appreciate how affordable it is&quot;
+                                    </h6>
+                                    
+                                </td>
+                                <td width=300>
+                                    <h6>음성적 잉여 비율</h6>
+                                    <img src="' %}" width=150 height=150/>
+                                    <h6>발표 빠르기</h6>
+                                    <img src="' %}" width=150 height=150/>
+                                </td>
+                            </tr>
+                        </table>
                         <div class="ct-chart ct-perfect-fourth"></div>
                     </div>
-                    <div class="large-6 columns description wow fadeInDown" data-wow-delay="1s">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec metus turpis. Sed dui ligula, luctus id lorem vitae, tempor placerat ex. Proin accumsan mi quam, at sollicitudin magna varius quis. </p>
-                        <p>In ut aliquet eros, vel luctus augue. Sed eu tellus dictum, elementum eros vel, accumsan ipsum. Nullam sodales, diam id egestas aliquet, metus turpis vehicula odio, non tincidunt velit magna et ligula. </p>
-                    </div>
-                </div>
-                <div class="report-row">
-                    <div class="large-6 columns description wow fadeInDown" data-wow-delay="0.5s">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec metus turpis. Sed dui ligula, luctus id lorem vitae, tempor placerat ex. Proin accumsan mi quam, at sollicitudin magna varius quis. </p>
-                        <p>Vivamus diam est, porttitor ut viverra in, blandit in risus. Pellentesque fermentum neque lobortis volutpat tristique.</p>
-                        <p>Nullam aliquam nibh a auctor ultrices. Praesent interdum varius ligula ut placerat. In tincidunt et sem ac varius.</p>
-                    </div>
-                    <div class="large-6 columns m-chart wow fadeInUp" data-wow-delay="1s">
-                        <h1 class="text-center">Search by word</h1>
-                        <p class="text-center">The top 10 searchs</p>
-                        <div class="ct-chart-2 ct-perfect-fourth"></div>
+                    <hr>
+                    <div class="large-12 columns title text-center">
+                        <h1>내용 분석</h1>
+                        <p>Check out our amazing graphs made by chartist.js based on our search results in our search engine</p>
+                        <table align="center">
+                            <tr align="center">
+                                <td width=300>
+                                    <h6>
+                                        &quot;I ve been using Servion for hosting many of my wordpress websites and I truly appreciate how affordable it is
+                                        I ve been using Servion for hosting many of my wordpress websites and I truly appreciate how affordable it is
+                                        I ve been using Servion for hosting many of my wordpress websites and I truly appreciate how affordable it is
+                                        I ve been using Servion for hosting many of my wordpress websites and I truly appreciate how affordable it is&quot;
+                                    </h6>
+                                    
+                                </td>
+                            </tr>
+                        </table>
+                        <div class="ct-chart ct-perfect-fourth"></div>
                     </div>
                 </div>
             </div>
