--- a/GoodPT/templates/index.html
+++ b/GoodPT/templates/index.html
@@ -11,7 +11,7 @@
     .image-box {
       width:380px; 
       height:220px; 
-      overflow:hidden; 
+      overflow:hidden;
       margin:0 auto;
       
     }
@@ -96,6 +96,28 @@
         <div class="col-md-6 mb-5 mb-md-0 h-100">
           <div class="card card-span bg-primary h-100">
             <div class="card-body p-4">
+              <div style="margin-bottom: 15px; text-align: center;">
+                <h5 style="color: white;">- 희망편 -</h5>
+              </div>
+              <div class="d-flex justify-content-between">
+                <div class="image-box">
+                  <a href="https://www.youtube.com/watch?v=IjN4HlzDlmw" target = "_blank">
+                    <img class="image-thumbnail" src="https://img.youtube.com/vi/IjN4HlzDlmw/0.jpg" />
+                  </a>
+                </div>
+              </div>
+              <div style="margin-top: 15px; text-align: center;">
+                <h5 style="color: white;">"나보다 잘하는데?" 교수님과 학생이 서로 감탄하는 ...</h5>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 mb-5 mb-md-0 h-100">
+          <div class="card card-span bg-primary h-100">
+            <div class="card-body p-4">
+              <div style="margin-bottom: 15px; text-align: center;">
+                <h5 style="color: white;">- 절망편 -</h5>
+              </div>
               <div class="d-flex justify-content-between">
                 <div class="image-box">
                   <a href="https://www.youtube.com/shorts/Oat4ikOFFQo" target = "_blank">
@@ -105,22 +127,6 @@
               </div>
               <div style="margin-top: 15px; text-align: center;">
                 <h5 style="color: white;">발표하다 긴장한 대학생 특징</h5>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 mb-5 mb-md-0 h-100">
-          <div class="card card-span bg-primary h-100">
-            <div class="card-body p-4">
-              <div class="d-flex justify-content-between">
-                <div class="image-box">
-                  <a href="https://www.youtube.com/shorts/JRuS_ez8n6E" target = "_blank">
-                    <img class="image-thumbnail" src="https://img.youtube.com/vi/JRuS_ez8n6E/0.jpg" />
-                  </a>
-                </div>
-              </div>
-              <div style="margin-top: 15px; text-align: center;">
-                <h5 style="color: white;">대학 새내기 발표 절망편</h5>
               </div>
             </div>
           </div>
