--- a/GoodPT/static/camera.css
+++ b/GoodPT/static/camera.css
@@ -53,15 +53,15 @@
 
 .pmodal-background{
     position : absolute;
-    width : 100%;
-    height : 100%;
+    /* width : 100%;
+    height : 100%; */
     background: transparent;
     display : flex;
     align-items : center;
     justify-content: center;
 }
 
-.pmodal-container{
+/* .pmodal-container{
     position : absolute;
     width : 50%;
     height : 20%;
@@ -71,4 +71,22 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-}
+} */
+
+.notice-box {
+    width:430px; 
+    height:500px; 
+    overflow:hidden;
+    margin:0 auto;
+    display : flex;
+    position : absolute;
+    z-index : 1;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .notice-thumbnail {
+    width:100%; 
+    height:100%;
+    object-fit:cover;
+    border-radius: 8px;
+  }
