--- a/GoodPT/static/report.css
+++ b/GoodPT/static/report.css
@@ -35,7 +35,8 @@ body {
 	font-weight: 200;
 }
 .hero p{
-	color: #c62828;
+	font-size: 12px;
+	margin-bottom: 0px;
 }
 .hero .bg{
 	background: url('https://images.unsplash.com/photo-1460925895917-afdab827c52f?ixlib=rb-0.3.5&q=85&fm=jpg&crop=entropy&cs=srgb&s=080ed40e726c97a170def433fe212832') center center no-repeat scroll;
