fix: layout presentation 메뉴

--- a/GoodPT/templates/layout.html
+++ b/GoodPT/templates/layout.html
@@ -39,6 +39,7 @@
           <div class="collapse navbar-collapse border-top border-lg-0 mt-4 mt-lg-0" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto pt-2 pt-lg-0 font-base">
               <li class="nav-item px-2"><a class="nav-link" href="/">Home</a></li>
+              <li class="nav-item px-2" ><a class="nav-link" href="/presentation">Presentation</a></li>
               <li class="nav-item px-2" ><a class="nav-link" href="{% url 'board:index' 'qna' %}">Board</a></li>
               {% if request.resolver_match.app_name == 'presentation' %}
               {% else %}
