fix: 게시판 디자인

--- a/GoodPT/board/templates/board/question_form.html
+++ b/GoodPT/board/templates/board/question_form.html
@@ -16,7 +16,7 @@
         </div>
         <div class="mb-3">
             <label for="content" class="form-label">내용</label>
-            <textarea class="form-control" name="content" id="content" style="resize: none;">
+            <textarea class="form-control" name="content" id="content" rows=10 style="resize: none;">
 {{ form.content.value|default_if_none:'' }}</textarea
             >
         </div>
