--- a/GoodPT/board/templates/board/question_detail.html
+++ b/GoodPT/board/templates/board/question_detail.html
@@ -54,7 +54,7 @@
         <h5>{{ answer_set.paginator.count }}개의 답변이 있습니다.</h5>
     </div>
     <div class="col-2">
-        <select class="form-control so">
+        <select class="form-control so" style="text-align:center;">
             <option value="recommend" {% if so == 'recommend' %}selected{% endif %}>추천순</option>
             <option value="recent" {% if so == 'recent' %}selected{% endif %}>최신순</option>
         </select>
