--- a/GoodPT/board/templates/board/question_detail.html
+++ b/GoodPT/board/templates/board/question_detail.html
@@ -23,7 +23,7 @@
             <div class="d-flex justify-content-end">
                 {% if question.modify_date %}
                 <div class="badge bg-light text-dark p-2 text-start mx-3">
-                    <div class="mb-2">modified at</div>
+                    <div class="mb-2">(수정됨)</div>
                     <div>{{ question.modify_date }}</div>
                 </div>
                 {% endif %}
@@ -79,7 +79,7 @@
                 <div class="d-flex justify-content-end">
                     {% if answer.modify_date %}
                     <div class="badge badge-light p-2 text-left mx-3">
-                        <div class="mb-2">modified at</div>
+                        <div class="mb-2">(수정됨)</div>
                         <div>{{ answer.modify_date }}</div>
                     </div>
                     {% endif %}
