register email 선택사항

--- a/GoodPT/accounts/templates/login.html
+++ b/GoodPT/accounts/templates/login.html
@@ -26,7 +26,7 @@
                                 
                             </div>
                             <input type="text" name="username" placeholder="이름">
-                            <input type="email" name="email" placeholder="이메일">
+                            <input type="email" name="email" placeholder="이메일(선택)">
                             <input type="password" name="password1" placeholder="비밀번호">
                             <input type="password" name="password2" placeholder="비밀번호 확인">
                             <button class="form_btn" name="register">회원가입</button>
