fix: 질의응답 페이지 디자인

--- a/GoodPT/presentation/templates/feedback.html
+++ b/GoodPT/presentation/templates/feedback.html
@@ -39,35 +39,57 @@
 				}); 
 			}); 
 		}); 
-</script> 
+</script>
 {% block content %}
-<div class="video-wrapper">  
-    <div class="video-container">            
-        <div class="video-item">                
-            <video autoplay muted id="preview"></video>
-        </div>            
-        <div class="video-item">                
-            <video id="recording" style="display:none"></video>            
+<div id="main" style="margin-top:20px;">
+    <div id="screen">
+      <h1>Screen</h1>
+      <div class="video-wrapper rounded-lg shadow-sm" id="chatcamera">  
+        <div class="video-container">            
+            <div class="video-item">                
+                <video autoplay muted id="preview"></video>
+            </div>            
+            <div class="video-item">                
+                <video id="recording" style="display:none"></video>            
+            </div>
+        </div>
+        <div class="button-container">            
+            <button class="record-button">
+                <img src="{% static '/img/icons/btn_record.png' %}" id = "button-record-image">
+            </button>           
+            <button class="stop-button">
+                <img src='../static/img/icons/btn_stop.png' id = "button-stop-image">
+            </button>            
+            <button class="play-button">
+                <img src='../static/img/icons/btn_play.png' id = "button-play-image">
+            </button>
+            <button class="analyze-button">
+                <img src='../static/img/icons/btn_analyze.png' id = "button-analyze-image">
+            </button>
+        </div>  
+    </div>
+    </div>
+    <div id="dialog">
+        <div class="container p-3 rounded-lg shadow-sm" id="chat">
+        <h3 class="text-center mb-4">Q&A Dialog</h3>
+
+        <div class="chat-container">
+            <div class="chat-history-wrapper overflow-auto" id="response">
+                </div>
+
+            <div class="chat-input-wrapper">
+                <form method="post" id="myform">
+                    {% csrf_token %}
+                    <textarea class="form-control" type="textarea" id="prompt" name="prompt" rows="3" placeholder="Type your response here..."></textarea>
+                    <button class="btn btn-primary mt-2" type="submit"><i class="bi bi-send"></i> Send</button>
+                </form>
+            </div>
         </div>
     </div>
+    </div>
 </div>
+
 <script defer src = "{% static '/js/feedback.js' %}"></script>
 <link rel="stylesheet" type="text/css" href="{% static 'camera.css' %}">
-<div class="container p-3 rounded-lg shadow-sm" style="margin-top: 30px">
-    <h3 class="text-center mb-4">Q&A Session</h3>
-
-    <div class="chat-container">
-        <div class="chat-history-wrapper overflow-auto" id="response">
-            </div>
-
-        <div class="chat-input-wrapper">
-            <form method="post" id="myform">
-                {% csrf_token %}
-                <textarea class="form-control" type="textarea" id="prompt" name="prompt" rows="3" placeholder="Type your response here..."></textarea>
-                <button class="btn btn-primary mt-2" type="submit"><i class="bi bi-send"></i> Send</button>
-            </form>
-        </div>
-    </div>
-</div>
 
 {% endblock content %}
