--- a/GoodPT/static/camera.css
+++ b/GoodPT/static/camera.css
@@ -1,63 +1,70 @@
 /* camera.css */
 
-.video-wrapper {    
-    height: 100%;    
-    overflow: hidden;    
-    display: flex;    
-    flex-direction: column;    
-    align-items: center;    
+.video-wrapper {
+    height: 100%;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
     /* margin-top : 20px; */
     padding-bottom: 43px;
     background-color: #e5e9ff;
-} 
+    border-radius: 30px;
+}
 
-.video-container {    
+.video-container {
     /* display: flex;    
     width: 550px;     */
-    padding: 1rem;    
+    padding: 1rem;
     justify-content: space-around;
-} 
+}
 
-.video-item > h2 {    
+.video-item > h2 {
     text-align: center;
 }
 
-.video-item > video {    
-    border: 1px solid #6671a4;    
-    width: 600px;
-    height : 451px;
+.video-item > video {
+    border: 1px solid #6671a4;
+    width: 90%;
+    height: 400px;
     border-radius: 30px;
     margin-top: 30px;
 }
 
-#button-record-image, #button-stop-image, #button-play-image{
-    width : 40px;
-    height : 40px;
+#button-record-image,
+#button-stop-image,
+#button-play-image {
+    width: 40px;
+    height: 40px;
 }
 
-#button-analyze-image{
-    width : 40px;
+#button-analyze-image {
+    width: 40px;
 }
-.record-button, .stop-button, .play-button{
+.record-button,
+.stop-button,
+.play-button {
     padding: 0 !important;
     /* background-color: white; */
-    border: none; 
+    border: none;
 }
 
-.stop-button, .play-button, .analyze-button{
+.stop-button,
+.play-button,
+.analyze-button {
     padding: 0 !important;
     border: none;
-    display : none;
+    display: none;
 }
 
-.pmodal-background{
-    position : absolute;
+.pmodal-background {
+    position: absolute;
     /* width : 100%;
     height : 100%; */
     background: transparent;
-    display : flex;
-    align-items : center;
+    display: flex;
+    align-items: center;
     justify-content: center;
 }
 
@@ -74,19 +81,42 @@
 } */
 
 .notice-box {
-    width:430px; 
-    height:500px; 
-    overflow:hidden;
-    margin:0 auto;
-    display : flex;
-    position : absolute;
-    z-index : 1;
+    width: 430px;
+    height: 500px;
+    overflow: hidden;
+    margin: 0 auto;
+    display: flex;
+    position: absolute;
+    z-index: 1;
     flex-direction: column;
     justify-content: center;
-  }
-  .notice-thumbnail {
-    width:100%; 
-    height:100%;
-    object-fit:cover;
+}
+.notice-thumbnail {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     border-radius: 8px;
-  }
+}
+
+#screen {
+    width: 30%;
+    height: 100%;
+    float: left;
+}
+#dialog {
+    width: 30%;
+    height: 100%;
+    float: right;
+}
+#main {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    text-align: center;
+}
+#chat{
+    margin-top:50px;
+    border-radius: 30px;
+}
