fix: camera.css

--- a/GoodPT/presentation/templates/feedback.html
+++ b/GoodPT/presentation/templates/feedback.html
@@ -46,10 +46,10 @@
       <h1>Screen</h1>
       <div class="video-wrapper rounded-lg shadow-sm" id="chatcamera">  
         <div class="video-container">            
-            <div class="video-item">                
+            <div class="video-item2">                
                 <video autoplay muted id="preview"></video>
             </div>            
-            <div class="video-item">                
+            <div class="video-item2">                
                 <video id="recording" style="display:none"></video>            
             </div>
         </div>
