--- a/GoodPT/static/camera.css
+++ b/GoodPT/static/camera.css
@@ -10,7 +10,6 @@
     /* margin-top : 20px; */
     padding-bottom: 43px;
     background-color: #e5e9ff;
-    border-radius: 30px;
 }
 
 .video-container {
@@ -26,9 +25,10 @@
 
 .video-item > video {
     border: 1px solid #6671a4;
-    width: 90%;
-    height: 400px;
+    width: 600px;
+    height: 451px;
     border-radius: 30px;
+    object-fit: cover;
     margin-top: 30px;
 }
 
@@ -94,7 +94,6 @@
 .notice-thumbnail {
     width: 100%;
     height: 100%;
-    object-fit: cover;
     border-radius: 8px;
 }
 
@@ -116,7 +115,28 @@
     align-items: center;
     text-align: center;
 }
-#chat{
-    margin-top:50px;
+#chat {
+    margin-top: 50px;
+    border-radius: 30px;
+}
+
+.video-item2 > video {
+    border: 1px solid #6671a4;
+    width: 90%;
+    height: 400px;
+    border-radius: 30px;
+    margin-top: 30px;
+    object-fit: cover;
+}
+#chatcamera {
+    height: 100%;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    /* margin-top : 20px; */
+    padding-bottom: 43px;
+    background-color: #e5e9ff;
     border-radius: 30px;
 }
