fix: base.html 아이콘 변경

--- a/GoodPT/board/templates/base.html
+++ b/GoodPT/board/templates/base.html
@@ -14,22 +14,16 @@
     <!-- ===============================================-->
 
     <!--    Favicons-->
-    <link rel="apple-touch-icon" sizes="180x180" href="{% static '/img/favicons/apple-touch-icon.png' %}">
-    <link rel="icon" type="image/png" sizes="32x32" href="{% static '/img/favicons/favicon-32x32.png' %}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{% static '/img/favicons/favicon-16x16.png' %}">
-    <link rel="shortcut icon" type="image/x-icon" href="{% static '/img/favicons/favicon.ico' %}">
-    <link rel="manifest" href="{% static '/img/favicons/manifest.json' %}">
-    <meta name="msapplication-TileImage" content="{% static '/img/favicons/mstile-150x150.png' %}">
-    <meta name="theme-color" content="#ffffff">
+    <link rel="shortcut icon" href="{% static 'img/logo/logo_eye_white_round.ico' %}"/>
     <!-- ===============================================-->
 
     <!--    Stylesheets-->
-    
     <link rel="stylesheet" href="{% static 'theme-rtl.css' %}">
     <link rel="stylesheet" href="{% static 'theme-rtl.min.css' %}">
     <link rel="stylesheet" href="{% static 'theme.css' %}">
     <link rel="stylesheet" href="{% static 'theme.min.css' %}">
     <link rel="stylesheet" href="{% static 'style.css' %}">
+
     <!-- ===============================================-->
   </head>
 
@@ -39,7 +33,7 @@
     <!-- ===============================================-->
     <main class="main" id="top">
       <nav class="navbar navbar-expand-lg navbar-light fixed-top py-4 d-block" data-navbar-on-scroll="data-navbar-on-scroll" style="background-color:#424D83"id="main_nav">
-        <div class="container"><a class="navbar-brand" href="/"><img src="{% static '/img/gallery/logo.png' %}" height="24" alt="..." /></a>
+        <div class="container"><a class="navbar-brand" href="/"><img src="{% static '/img/logo/main_logo.png' %}" height="35" alt="..." /></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"> </span></button>
           <div class="collapse navbar-collapse border-top border-lg-0 mt-4 mt-lg-0" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto pt-2 pt-lg-0 font-base">
