개인정보처리방침위치수정
위치수정

--- a/GoodPT/accounts/templates/privacyPolicy.html
+++ b/GoodPT/accounts/templates/privacyPolicy.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>AIVLE</title>
+        <title>개인정보처리방침</title>
 	    <link rel="stylesheet" href="/tpl/001/css/reset.css">
 	    <link rel="stylesheet" href="/tpl/001/css/font.css">
 	    <link rel="stylesheet" href="/tpl/001/css/style.css?v1">
