--- a/GoodPT/templates/index.html
+++ b/GoodPT/templates/index.html
@@ -30,7 +30,7 @@
 
     <div class="container">
       <div class="row align-items-center min-vh-50 min-vh-sm-75">
-        <div class="col-md-5 col-lg-6 order-0 order-md-1"><img class="w-100" src="{% static '/img/illustrations/hero-header.png' %}" alt="..." /></div>
+        <div class="col-md-5 col-lg-6 order-0 order-md-1"><img class="w-100" src="{% static '/img/illustrations/main.png' %}" alt="..." /></div>
         <div class="col-md-7 col-lg-6 text-md-start text-center">
           <h1 class="text-light fs-md-5 fs-lg-6">Get a Confidence</h1>
           <p class="text-light">with Good-PT</p><a class="btn btn-primary" href="/presentation" role="button">Start Presentation</a>
