--- a/GoodPT/static/report.css
+++ b/GoodPT/static/report.css
@@ -1,22 +1,18 @@
 body {
 	font-family: 'Raleway', sans-serif;
 }
-
 .report{
 	display : flex;
 	flex-direction : row;
 }
-
 .report-list{
 	width : 18%;
 	background-color: #e5e9ff;
 	border-right: 1px solid black;
 }
-
 .report-main{
 	width : 82%;
 }
-
 .report-container{
     background : white;
 	padding : 2%;
@@ -96,4 +92,28 @@ hr{
 .ct-perfect-fourth:before{
 
     padding-bottom : 30%;
+}
+
+.progress-bar {
+	width: 100%;
+	height: 30px;
+	background-color: #dedede;
+	font-weight: 600;
+	font-size: .8rem;
+}
+.progress-bar .progress {
+	width: 72%;
+	height: 30px;
+	padding: 0;
+	text-align: center;
+	background-color: #4F98FF;
+	color: #111;
+	border-radius: 0;
+}
+.graph-box {
+	padding: 20px;
+	background-color: #424D83;
+	border-radius: 10px;
+	margin-top: 10px;
+	margin-bottom: 10px;
 }
