feat : report error page

--- a/GoodPT/report/templates/zeroReport.html
+++ b/GoodPT/report/templates/zeroReport.html
@@ -25,6 +25,7 @@
         </div>
         <div class = "report-main">
             <div class = "report-container">
+                <img src = "{% static '/img/gallery/zeroReport.png' %}" height="85%"/>
             </div>
         </div>
     </div>
